[package]
name = "blockchain-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = "1.17.0"
chrono = "0.4.41"
tower = "0.5.2"
mongodb = "3.2.3"
futures-util = "0.3.31"
rand = "0.8"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
